# timertool

./: Cargo.toml  Makefile  build.rs
.cargo/: config.toml
src/: animations.rs  buffer_backend.rs  clickable.rs  clock.rs  constants.rs  display_driver.rs  encoder.rs  lib.rs  payloads.rs  render_display.rs  scenes_util.rs  text_box.rs  tft.rs  time_util.rs
src/color_mixing/: alpha_blending.rs  gradient.rs  mod.rs
src/ili9481/: graphics_bridge.rs  ili9481_driver.rs  mod.rs
