[package]
edition = "2021"
name    = "timetool_v2"
version = "0.1.0"

[[bin]]
name = "timetool_v2"
path = "./src/bin/async_main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.9.0" }
embassy-time = { version = "0.5.0" }
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "psram", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
static_cell = { version = "2.1.1" }
esp-alloc = { version = "0.9.0", features = ["esp32s3", "nightly"] }
embedded-hal-bus = "0.3.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
ili9341 = "0.6.0"
fugit = "0.3.9"
embedded-hal-async = "1.0.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
eg-seven-segment = "0.2.0"
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
heapless = "0.9.2"
tinybmp = "0.6.0"

[build-dependencies]
image = "0.25"
gif = "0.13"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
