[package]
edition = "2021"
name    = "timetool_v2"
version = "0.1.0"

# -------------------------------------------------------------------
# Feature flags - select exactly ONE display backend
# -------------------------------------------------------------------
[features]
default = ["simulator"]

# Hardware backends
ili9488 = [
    "dep:mipidsi",
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-backtrace",
    "dep:esp-println",
    "dep:esp-alloc",
    "dep:esp-bootloader-esp-idf",
    "dep:embedded-hal-bus",
    "dep:static_cell",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:allocator-api2",
    "dep:display-interface-spi",
    "dep:display-interface",
    "dep:embedded-hal",
    "dep:embedded-hal-async",
]

ili9341 = [
    "dep:mipidsi",
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-backtrace",
    "dep:esp-println",
    "dep:esp-alloc",
    "dep:esp-bootloader-esp-idf",
    "dep:embedded-hal-bus",
    "dep:static_cell",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:allocator-api2",
    "dep:display-interface-spi",
    "dep:display-interface",
    "dep:embedded-hal",
    "dep:embedded-hal-async",
]

simulator = [
    "dep:embedded-graphics-simulator",
    "critical-section/std"
]

# ----------------- Binaries ---------------
[[bin]]
name = "timetool_v2"
path = "./src/bin/async_main.rs"
required-features = ["ili9341"]

[[bin]]
name = "simulator"
path = "./src/bin/simulator_async_main.rs"
required-features = ["simulator"]


#--------------------------------------------
#            Global Dependencies
#--------------------------------------------
[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.9.2"
tinybmp = "0.6.0"
embedded-ttf = "0.2.2"
eg-seven-segment = "0.2.0"
fugit = "0.3.9"
rusttype = { version = "0.9", default-features = false }
critical-section = "1.2.0"

# ------------------- Hardware Dependencies ----------------------------
embassy-executor = { version = "0.9.0", optional = true }
embassy-time = { version = "0.5.0", optional = true }
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
], optional = true }
esp-hal = { version = "1.0.0", features = ["esp32s3", "psram", "unstable"], optional = true }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"], optional = true }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp32s3"], optional = true }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"], optional = true }
static_cell = { version = "2.1.1", optional = true }
esp-alloc = { version = "0.9.0", features = ["esp32s3", "nightly"], optional = true }
embedded-hal-bus = { version = "0.3.0", optional = true }
display-interface-spi = { version = "0.5.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
mipidsi = { version = "0.10.0", optional = true }
display-interface = { version = "0.5.0", optional = true } 
embedded-hal = { version = "1.0.0", optional = true }

# --------------- Simulator Dependencies ---------------------
embedded-graphics-simulator = { version = "0.8.0", optional = true }
micromath = "2.1.0"


# --------------- Build Dependencies (asset pre-processing) ---------------------
[build-dependencies]
image = "0.25"
gif = "0.13"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
